video hover fix on smaller screens

--- a/src/components/extendable-video-down/extendable-video-down.module.css
+++ b/src/components/extendable-video-down/extendable-video-down.module.css
@@ -106,4 +106,9 @@
 		width: 100%;
 		height: auto;
 	}
+
+	.extendableVideoBackground {
+		width: 100%;
+		height: auto;
+	}
 }
