--- a/src/pages/broadcast-tv-page/broadcast-tv.module.css
+++ b/src/pages/broadcast-tv-page/broadcast-tv.module.css
@@ -92,4 +92,7 @@
 		padding-bottom: 60px;
 		flex-direction: column;
 	}
+	.portfolio-video {
+		display: none;
+	}
 }
