--- a/src/pages/homepage/homepage.styles.css
+++ b/src/pages/homepage/homepage.styles.css
@@ -97,4 +97,7 @@
 		padding-bottom: 60px;
 		flex-direction: column;
 	}
+	.home-video {
+		display: none;
+	}
 }
