--- a/src/pages/video-content-page/portfolio-panels.styles.css
+++ b/src/pages/video-content-page/portfolio-panels.styles.css
@@ -90,4 +90,8 @@
 		padding-bottom: 60px;
 		flex-direction: column;
 	}
+
+	.portfolio-video {
+		display: none;
+	}
 }
